fix: z-index header

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -616,7 +616,7 @@ a {
     --width: 100%;
     --height: 100%;
     width: 58%;
-    z-index: 1f;
+    z-index: 1;
     position: relative;
 }
 
